# pytest-cython

./: .bumpversion.cfg  .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  python-check.yml  python-publish.yml  python-test.yml  test.yml
src/pytest_cython/: __init__.py  plugin.py
tests/: test_pytest_cython.py
tests/example-project/: pyproject.toml  setup.py
tests/example-project/src/pypackage/: pure_py_module.py
